[FEAT] 1차 세미나 실습

--- a/week1/app/build.gradle
+++ b/week1/app/build.gradle
@@ -7,6 +7,10 @@ android {
     namespace 'com.m6z1.week1'
     compileSdk 33
 
+    buildFeatures {
+        viewBinding = true
+    }
+
     defaultConfig {
         applicationId "com.m6z1.week1"
         minSdk 28
